myCMinus/MyCMinusParser.py
# Generated from myCminus_og/MyCMinus.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class MyCMinusParser ( Parser ):

    grammarFileName = "MyCMinus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'print'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'&&'", "'||'", 
                     "'!'", "'=='", "'>'", "'>='", "'<'", "'<='", "'!='", 
                     "'int'", "'float'", "'void'", "'string'", "'char'", 
                     "'bool'", "'return'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "PRINT", "LPAR", 
                      "RPAR", "LCURL", "RCURL", "LBRAC", "RBRAC", "SEMI", 
                      "COMMA", "PLUS", "MINUS", "TIMES", "DIVIDE", "EQUALS", 
                      "AND", "OR", "NOT", "EQUALTO", "GTHAN", "GEQUAL", 
                      "LTHAN", "LEQUAL", "NOTEQ", "INT", "FLOAT", "VOID", 
                      "STRING", "CHAR", "BOOL", "RETURN", "ID", "NUMBER", 
                      "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statementList = 2
    RULE_varType = 3
    RULE_statement = 4
    RULE_assignStatement = 5
    RULE_conditionalStat = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_expression = 9
    RULE_logical_or_expr = 10
    RULE_logical_and_expr = 11
    RULE_equalityExp = 12
    RULE_relationExp = 13
    RULE_arithmeticExp = 14
    RULE_multiplicativeExp = 15
    RULE_factor = 16

    ruleNames =  [ "program", "block", "statementList", "varType", "statement", 
                   "assignStatement", "conditionalStat", "ifStatement", 
                   "whileStatement", "expression", "logical_or_expr", "logical_and_expr", 
                   "equalityExp", "relationExp", "arithmeticExp", "multiplicativeExp", 
                   "factor" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    PRINT=4
    LPAR=5
    RPAR=6
    LCURL=7
    RCURL=8
    LBRAC=9
    RBRAC=10
    SEMI=11
    COMMA=12
    PLUS=13
    MINUS=14
    TIMES=15
    DIVIDE=16
    EQUALS=17
    AND=18
    OR=19
    NOT=20
    EQUALTO=21
    GTHAN=22
    GEQUAL=23
    LTHAN=24
    LEQUAL=25
    NOTEQ=26
    INT=27
    FLOAT=28
    VOID=29
    STRING=30
    CHAR=31
    BOOL=32
    RETURN=33
    ID=34
    NUMBER=35
    WS=36

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlockLabContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(MyCMinusParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockLab" ):
                listener.enterBlockLab(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockLab" ):
                listener.exitBlockLab(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockLab" ):
                return visitor.visitBlockLab(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = MyCMinusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            localctx = MyCMinusParser.BlockLabContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatListBlockContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LCURL(self):
            return self.getToken(MyCMinusParser.LCURL, 0)
        def statementList(self):
            return self.getTypedRuleContext(MyCMinusParser.StatementListContext,0)

        def RCURL(self):
            return self.getToken(MyCMinusParser.RCURL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatListBlock" ):
                listener.enterStatListBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatListBlock" ):
                listener.exitStatListBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatListBlock" ):
                return visitor.visitStatListBlock(self)
            else:
                return visitor.visitChildren(self)



    def block(self):

        localctx = MyCMinusParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            localctx = MyCMinusParser.StatListBlockContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(MyCMinusParser.LCURL)
            self.state = 37
            self.statementList(0)
            self.state = 38
            self.match(MyCMinusParser.RCURL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_statementList

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StatListContext(StatementListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statementList(self):
            return self.getTypedRuleContext(MyCMinusParser.StatementListContext,0)

        def SEMI(self):
            return self.getToken(MyCMinusParser.SEMI, 0)
        def statement(self):
            return self.getTypedRuleContext(MyCMinusParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatList" ):
                listener.enterStatList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatList" ):
                listener.exitStatList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatList" ):
                return visitor.visitStatList(self)
            else:
                return visitor.visitChildren(self)


    class SingleStatContext(StatementListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(MyCMinusParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleStat" ):
                listener.enterSingleStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleStat" ):
                listener.exitSingleStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStat" ):
                return visitor.visitSingleStat(self)
            else:
                return visitor.visitChildren(self)



    def statementList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MyCMinusParser.StatementListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_statementList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = MyCMinusParser.SingleStatContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 41
            self.statement()
            self._ctx.stop = self._input.LT(-1)
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MyCMinusParser.StatListContext(self, MyCMinusParser.StatementListContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statementList)
                    self.state = 43
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 44
                    self.match(MyCMinusParser.SEMI)
                    self.state = 45
                    self.statement() 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MyCMinusParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MyCMinusParser.FLOAT, 0)

        def VOID(self):
            return self.getToken(MyCMinusParser.VOID, 0)

        def BOOL(self):
            return self.getToken(MyCMinusParser.BOOL, 0)

        def STRING(self):
            return self.getToken(MyCMinusParser.STRING, 0)

        def CHAR(self):
            return self.getToken(MyCMinusParser.CHAR, 0)

        def getRuleIndex(self):
            return MyCMinusParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = MyCMinusParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyCMinusParser.INT) | (1 << MyCMinusParser.FLOAT) | (1 << MyCMinusParser.VOID) | (1 << MyCMinusParser.STRING) | (1 << MyCMinusParser.CHAR) | (1 << MyCMinusParser.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def conditionalStat(self):
            return self.getTypedRuleContext(MyCMinusParser.ConditionalStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondStat" ):
                listener.enterCondStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondStat" ):
                listener.exitCondStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondStat" ):
                return visitor.visitCondStat(self)
            else:
                return visitor.visitChildren(self)


    class PrintStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(MyCMinusParser.PRINT, 0)
        def expression(self):
            return self.getTypedRuleContext(MyCMinusParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStat" ):
                listener.enterPrintStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStat" ):
                listener.exitPrintStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStat" ):
                return visitor.visitPrintStat(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignStatement(self):
            return self.getTypedRuleContext(MyCMinusParser.AssignStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStat" ):
                listener.enterAssignStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStat" ):
                listener.exitAssignStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStat" ):
                return visitor.visitAssignStat(self)
            else:
                return visitor.visitChildren(self)


    class ExpStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MyCMinusParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpStat" ):
                listener.enterExpStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpStat" ):
                listener.exitExpStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpStat" ):
                return visitor.visitExpStat(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStat" ):
                listener.enterEmptyStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStat" ):
                listener.exitEmptyStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStat" ):
                return visitor.visitEmptyStat(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = MyCMinusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 59
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = MyCMinusParser.AssignStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.assignStatement()
                pass

            elif la_ == 2:
                localctx = MyCMinusParser.PrintStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(MyCMinusParser.PRINT)
                self.state = 55
                self.expression()
                pass

            elif la_ == 3:
                localctx = MyCMinusParser.ExpStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.expression()
                pass

            elif la_ == 4:
                localctx = MyCMinusParser.CondStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.conditionalStat()
                pass

            elif la_ == 5:
                localctx = MyCMinusParser.EmptyStatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_assignStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentContext(AssignStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.AssignStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(MyCMinusParser.VarTypeContext,0)

        def ID(self):
            return self.getToken(MyCMinusParser.ID, 0)
        def EQUALS(self):
            return self.getToken(MyCMinusParser.EQUALS, 0)
        def expression(self):
            return self.getTypedRuleContext(MyCMinusParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)



    def assignStatement(self):

        localctx = MyCMinusParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignStatement)
        try:
            localctx = MyCMinusParser.AssignmentContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.varType()
            self.state = 62
            self.match(MyCMinusParser.ID)
            self.state = 63
            self.match(MyCMinusParser.EQUALS)
            self.state = 64
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_conditionalStat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileCondContext(ConditionalStatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.ConditionalStatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(MyCMinusParser.WhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileCond" ):
                listener.enterWhileCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileCond" ):
                listener.exitWhileCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileCond" ):
                return visitor.visitWhileCond(self)
            else:
                return visitor.visitChildren(self)


    class IfCondContext(ConditionalStatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.ConditionalStatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(MyCMinusParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfCond" ):
                listener.enterIfCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfCond" ):
                listener.exitIfCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfCond" ):
                return visitor.visitIfCond(self)
            else:
                return visitor.visitChildren(self)



    def conditionalStat(self):

        localctx = MyCMinusParser.ConditionalStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditionalStat)
        try:
            self.state = 68
            token = self._input.LA(1)
            if token in [MyCMinusParser.IF]:
                localctx = MyCMinusParser.IfCondContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.ifStatement()

            elif token in [MyCMinusParser.WHILE]:
                localctx = MyCMinusParser.WhileCondContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.whileStatement()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_ifStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatContext(IfStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.IfStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MyCMinusParser.IF, 0)
        def LPAR(self):
            return self.getToken(MyCMinusParser.LPAR, 0)
        def expression(self):
            return self.getTypedRuleContext(MyCMinusParser.ExpressionContext,0)

        def RPAR(self):
            return self.getToken(MyCMinusParser.RPAR, 0)
        def block(self):
            return self.getTypedRuleContext(MyCMinusParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)


    class IfelseStatContext(IfStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.IfStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MyCMinusParser.IF, 0)
        def LPAR(self):
            return self.getToken(MyCMinusParser.LPAR, 0)
        def expression(self):
            return self.getTypedRuleContext(MyCMinusParser.ExpressionContext,0)

        def RPAR(self):
            return self.getToken(MyCMinusParser.RPAR, 0)
        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyCMinusParser.BlockContext)
            else:
                return self.getTypedRuleContext(MyCMinusParser.BlockContext,i)

        def ELSE(self):
            return self.getToken(MyCMinusParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfelseStat" ):
                listener.enterIfelseStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfelseStat" ):
                listener.exitIfelseStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelseStat" ):
                return visitor.visitIfelseStat(self)
            else:
                return visitor.visitChildren(self)



    def ifStatement(self):

        localctx = MyCMinusParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        try:
            self.state = 84
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = MyCMinusParser.IfStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(MyCMinusParser.IF)
                self.state = 71
                self.match(MyCMinusParser.LPAR)
                self.state = 72
                self.expression()
                self.state = 73
                self.match(MyCMinusParser.RPAR)
                self.state = 74
                self.block()
                pass

            elif la_ == 2:
                localctx = MyCMinusParser.IfelseStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(MyCMinusParser.IF)
                self.state = 77
                self.match(MyCMinusParser.LPAR)
                self.state = 78
                self.expression()
                self.state = 79
                self.match(MyCMinusParser.RPAR)
                self.state = 80
                self.block()
                self.state = 81
                self.match(MyCMinusParser.ELSE)
                self.state = 82
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_whileStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatContext(WhileStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.WhileStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(MyCMinusParser.WHILE, 0)
        def LPAR(self):
            return self.getToken(MyCMinusParser.LPAR, 0)
        def expression(self):
            return self.getTypedRuleContext(MyCMinusParser.ExpressionContext,0)

        def RPAR(self):
            return self.getToken(MyCMinusParser.RPAR, 0)
        def block(self):
            return self.getTypedRuleContext(MyCMinusParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def whileStatement(self):

        localctx = MyCMinusParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStatement)
        try:
            localctx = MyCMinusParser.WhileStatContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MyCMinusParser.WHILE)
            self.state = 87
            self.match(MyCMinusParser.LPAR)
            self.state = 88
            self.expression()
            self.state = 89
            self.match(MyCMinusParser.RPAR)
            self.state = 90
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LogicalOrExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logical_or_expr(self):
            return self.getTypedRuleContext(MyCMinusParser.Logical_or_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExp" ):
                listener.enterLogicalOrExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExp" ):
                listener.exitLogicalOrExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOrExp" ):
                return visitor.visitLogicalOrExp(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = MyCMinusParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression)
        try:
            localctx = MyCMinusParser.LogicalOrExpContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.logical_or_expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Logical_or_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyCMinusParser.RULE_logical_or_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LogicalOrAndContext(Logical_or_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyCMinusParser.Logical_or_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)
